--- a/startup-tycoon-web/templates/about.html
+++ b/startup-tycoon-web/templates/about.html
@@ -103,6 +103,24 @@
   </div>
 </div>
 
+<!-- FINANCE FORMULAS2 -->
+<div style="background:#fff3cd; border:2px solid #ffeaa7; border-radius:15px; padding:2rem; margin:2rem 0;">
+  <h2>💵 How Profit and Loss Are Calculated2</h2>
+  <ul>
+    <h3>📈 Monthly Revenue</h3>
+    <p>Each month, if there is no special event blocking revenue:</p>
+    <p>The monthly revenue is calculated by the amout of customer × reputation × base revenue (randomly between 5 and 8)</p>
+    <p><em>Example:</em> 200 customers, quality 2.0, reputation 1.5 gives roughly 200 × 2.0 × 1.5 × ~6.5 ≈ 3,900 CHF.</p>
+  </ul>
+  <ul>
+    <h3>💸 Monthly Operating Costs</h3>
+    <p>Each month, if there is no special event blocking revenue:</p>
+      <p>The monthly costs is calculated by 500 + the amout of employees × 2000</p>
+      <p>Events can temporarily increase or reduce costs. Examples: interest rate rise +500 CHF per month, tax reduction −500 CHF per month, startup dog +150 to +250 CHF per month.</p>
+  </ul>
+</div>
+
+
 <!-- EVENTS SHORT INFO -->
 <div style="background:#d4edda; border:2px solid #c3e6cb; border-radius:15px; padding:2rem; margin:2rem 0;">
   <h2>🎭 Random Events</h2>
@@ -155,6 +173,7 @@
 </div>
 
 {% endblock %}
+
 
 
 
